keycloak/yaml/keycloak-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
spec:
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:17.0.1
        args:
        - start
        - --auto-build
        - --hostname=localhost
        - --https-certificate-file=/certs/tls.crt
        - --https-certificate-key-file=/certs/tls.key
        - --spi-theme-static-max-age=-1
        - --spi-theme-cache-themes=false
        - --spi-theme-cache-templates=false
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - name: http
          containerPort: 8080
        - name: https
          containerPort: 8443
        volumeMounts:
        - name: keycloak-certs-vlm
          mountPath: "/certs"
          readOnly: true
      volumes:
      - name: keycloak-certs-vlm
        secret:
          secretName: ssl-certs
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
spec:
  selector:
    app: keycloak
  ports:
    - name: https
      port: 80
      targetPort: 8443
