keycloak/yaml/example-keycloak-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-test
spec:
  tls:
    - hosts:
      - foo.bar.com
      # This assumes tls-secret exists and the SSL
      # certificate contains a CN for foo.bar.com
      secretName: keycloak-ssl-certs
  ingressClassName: nginx
  rules:
    -  http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: keycloak-svc
              port:
                number: 80
